nixidy/generated/prod/dvd-webdav/Service-dvd-webdav.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dvd-webdav
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dvd-webdav
    app.kubernetes.io/service: dvd-webdav
  name: dvd-webdav
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: dvd-webdav
    app.kubernetes.io/instance: dvd-webdav
    app.kubernetes.io/name: dvd-webdav
  type: ClusterIP
