nixidy/generated/prod/dvd-webdav/HTTPRoute-dvd-webdav.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: dvd-webdav
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dvd-webdav
  name: dvd-webdav
  namespace: media
spec:
  hostnames:
    - dvd.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dvd-webdav
          namespace: media
          port: 8080
          weight: 1
